update rhbpms_4768_reproducer project

--- a/RHBPMS_4768_reproducer/pom.xml
+++ b/RHBPMS_4768_reproducer/pom.xml
@@ -5,6 +5,7 @@
   <groupId>org.kie.example</groupId>
   <artifactId>project1</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <name>RHBPMS_4768_reproducer</name>
   <repositories>
     <repository>
       <id>guvnor-m2-repo</id>
